--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,6 +4,9 @@ project:
 
 lang: fr
 
+website:
+  favicon: images/logoUP.png
+
 book:
   title: "Statistiques Fondamentales"
   author: "Simon Coste"
